Scrollbar fix

--- a/style.css
+++ b/style.css
@@ -16,7 +16,6 @@ body {
   width: 100%;
   background: rgb(118, 110, 108);
   color: white;
-  padding: 10px;
 }
 
 .start {
@@ -113,14 +112,14 @@ body {
   background: rgb(118, 110, 108);
   width: 100%;
   max-height: 100%;
-  padding: 10px;
+  padding: 10px 0;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 
-.
+
 /*............Responsive part............ */
 
 @media(max-width:1123px) {
